# dataset_generate

./: .gitignore  README.md  main.py  main_old_works.py  pyproject.toml  split.py
queries/: adx.kql  databricks.sql  duckdb.sql  motherduck.sql
sql_queries/: heavy.md  light.md  super_heavy.md
